--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "contao/manager-plugin": "<2.0 || >=3.0"
     },
     "require-dev": {
-        "contao/manager-plugin": "^2.0",
+        "contao/manager-plugin": "^2.0"
     },
     "extra": {
         "contao-manager-plugin": "LinkingYou\\ContaoNewsletterReplyTo\\ContaoManager\\Plugin"
